# fluid.rs

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  api.md
crates/fluid_core/: Cargo.toml  README.md
crates/fluid_core/src/: config.rs  engine.rs  fluid.rs  input.rs  lib.rs  renderer.rs
crates/fluid_core/src/shaders/: advection.wgsl  base.wgsl  bloom.wgsl  blur.wgsl  clear.wgsl  copy.wgsl  curl.wgsl  display.wgsl  divergence.wgsl  gradient_subtract.wgsl  pressure.wgsl  splat.wgsl  sunrays.wgsl  vorticity.wgsl
demos/desktop_demo/: Cargo.toml
demos/desktop_demo/src/: main.rs
scripts/: sync-crate-docs.ps1
